--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -58,10 +58,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kKb-yi-2d9" customClass="WCCreditCardInfoEntryController">
-                                <rect key="frame" x="200" y="198" width="200" height="205"/>
+                                <rect key="frame" x="170" y="198" width="260" height="205"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Donation Amount" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="51W-xJ-teu">
-                                        <rect key="frame" x="28" y="5" width="164" height="30"/>
+                                        <rect key="frame" x="28" y="5" width="224" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="134" id="BpG-hs-B4C"/>
                                         </constraints>
@@ -80,7 +80,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kgi-JX-FDw">
-                                        <rect key="frame" x="8" y="43" width="184" height="30"/>
+                                        <rect key="frame" x="8" y="43" width="244" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="180" id="ATZ-9g-4Ea"/>
                                         </constraints>
@@ -93,36 +93,39 @@
                                         </variation>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9dR-7U-4Zn">
-                                        <rect key="frame" x="8" y="81" width="184" height="30"/>
+                                        <rect key="frame" x="8" y="81" width="244" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Credit Card Number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W4S-8m-m1R">
-                                        <rect key="frame" x="8" y="119" width="184" height="30"/>
+                                        <rect key="frame" x="8" y="119" width="182" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="182" id="aP2-jq-jyJ"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tEp-Fa-YS7">
-                                        <rect key="frame" x="0.0" y="157" width="200" height="48"/>
+                                        <rect key="frame" x="30" y="157" width="200" height="40"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="MM" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y3P-J0-N5d">
-                                                <rect key="frame" x="8" y="9" width="46" height="30"/>
+                                                <rect key="frame" x="8" y="5" width="46" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="46" id="dHI-WP-WxX"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Zip" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L7j-jc-VZs">
-                                                <rect key="frame" x="124" y="9" width="68" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="68" id="wYj-wY-tOi"/>
-                                                </constraints>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="YYYY" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="naI-wO-ZFL">
+                                                <rect key="frame" x="60" y="5" width="59" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="YYYY" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="naI-wO-ZFL">
-                                                <rect key="frame" x="60" y="9" width="59" height="30"/>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Zip" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L7j-jc-VZs">
+                                                <rect key="frame" x="124" y="5" width="68" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="68" id="wYj-wY-tOi"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
@@ -133,8 +136,9 @@
                                             <constraint firstItem="Y3P-J0-N5d" firstAttribute="baseline" secondItem="naI-wO-ZFL" secondAttribute="baseline" id="4zO-s4-9gi"/>
                                             <constraint firstItem="L7j-jc-VZs" firstAttribute="baseline" secondItem="naI-wO-ZFL" secondAttribute="baseline" id="6ED-hY-Vf4"/>
                                             <constraint firstItem="Y3P-J0-N5d" firstAttribute="centerY" secondItem="naI-wO-ZFL" secondAttribute="centerY" id="9Zu-Av-f3j"/>
-                                            <constraint firstAttribute="height" constant="48" id="Fw0-sj-HlT"/>
+                                            <constraint firstAttribute="height" constant="40" id="Fw0-sj-HlT"/>
                                             <constraint firstAttribute="trailing" secondItem="L7j-jc-VZs" secondAttribute="trailing" constant="8" id="Mod-f1-jfp"/>
+                                            <constraint firstAttribute="width" constant="200" id="Qce-C7-2Dh"/>
                                             <constraint firstItem="L7j-jc-VZs" firstAttribute="centerY" secondItem="naI-wO-ZFL" secondAttribute="centerY" id="SWD-9O-18I"/>
                                             <constraint firstItem="Y3P-J0-N5d" firstAttribute="centerY" secondItem="tEp-Fa-YS7" secondAttribute="centerY" id="SmK-vR-YlT"/>
                                             <constraint firstItem="L7j-jc-VZs" firstAttribute="centerY" secondItem="naI-wO-ZFL" secondAttribute="centerY" id="VZO-17-Vzl"/>
@@ -154,29 +158,46 @@
                                             </mask>
                                         </variation>
                                     </view>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CVV" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i6R-PU-mcg">
+                                        <rect key="frame" x="198" y="119" width="54" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="46" id="8Wy-OX-6yD"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="8Wy-OX-6yD"/>
+                                            </mask>
+                                        </variation>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="51W-xJ-teu" firstAttribute="leading" secondItem="hSv-sr-fUc" secondAttribute="trailing" constant="8" id="0qW-4q-dHD"/>
-                                    <constraint firstItem="tEp-Fa-YS7" firstAttribute="top" secondItem="W4S-8m-m1R" secondAttribute="bottom" constant="8" id="1kM-Ru-lHA"/>
                                     <constraint firstItem="W4S-8m-m1R" firstAttribute="trailing" secondItem="9dR-7U-4Zn" secondAttribute="trailing" id="1n9-uC-ph8"/>
+                                    <constraint firstItem="i6R-PU-mcg" firstAttribute="leading" secondItem="W4S-8m-m1R" secondAttribute="trailing" constant="8" symbolic="YES" id="3Ga-PO-Vvj"/>
                                     <constraint firstAttribute="height" constant="205" id="7F2-uc-r1h"/>
                                     <constraint firstItem="Kgi-JX-FDw" firstAttribute="trailing" secondItem="51W-xJ-teu" secondAttribute="trailing" id="BRM-1s-EMB"/>
+                                    <constraint firstItem="tEp-Fa-YS7" firstAttribute="top" secondItem="W4S-8m-m1R" secondAttribute="bottom" constant="8" symbolic="YES" id="BwH-62-yMH"/>
                                     <constraint firstItem="hSv-sr-fUc" firstAttribute="centerY" secondItem="51W-xJ-teu" secondAttribute="centerY" id="D6w-BN-eGJ"/>
                                     <constraint firstItem="Kgi-JX-FDw" firstAttribute="top" secondItem="51W-xJ-teu" secondAttribute="bottom" constant="8" id="Ffb-dn-orW"/>
-                                    <constraint firstItem="W4S-8m-m1R" firstAttribute="leading" secondItem="9dR-7U-4Zn" secondAttribute="leading" id="Frc-Dj-MN0"/>
+                                    <constraint firstAttribute="centerX" secondItem="tEp-Fa-YS7" secondAttribute="centerX" id="Gpj-NQ-okY"/>
+                                    <constraint firstItem="i6R-PU-mcg" firstAttribute="top" secondItem="9dR-7U-4Zn" secondAttribute="bottom" constant="8" symbolic="YES" id="IBc-wA-03I"/>
                                     <constraint firstItem="Kgi-JX-FDw" firstAttribute="trailing" secondItem="51W-xJ-teu" secondAttribute="trailing" id="K3W-xv-GnT"/>
                                     <constraint firstItem="9dR-7U-4Zn" firstAttribute="trailing" secondItem="Kgi-JX-FDw" secondAttribute="trailing" id="KKr-38-qEJ"/>
                                     <constraint firstItem="hSv-sr-fUc" firstAttribute="leading" secondItem="kKb-yi-2d9" secondAttribute="leading" constant="8" id="OoB-sT-VGM"/>
                                     <constraint firstAttribute="trailing" secondItem="tEp-Fa-YS7" secondAttribute="trailing" id="Qb7-rc-m0C"/>
-                                    <constraint firstAttribute="width" constant="200" id="Qzv-gq-Y5o"/>
+                                    <constraint firstAttribute="width" constant="260" id="Qzv-gq-Y5o"/>
                                     <constraint firstItem="Kgi-JX-FDw" firstAttribute="leading" secondItem="kKb-yi-2d9" secondAttribute="leading" constant="8" id="Zea-qb-pWF"/>
                                     <constraint firstAttribute="centerX" secondItem="Kgi-JX-FDw" secondAttribute="centerX" id="ZjC-u5-i3l"/>
                                     <constraint firstItem="tEp-Fa-YS7" firstAttribute="leading" secondItem="kKb-yi-2d9" secondAttribute="leading" id="a7T-y4-avp"/>
                                     <constraint firstAttribute="trailing" secondItem="Kgi-JX-FDw" secondAttribute="trailing" id="ccj-C2-MfW"/>
                                     <constraint firstAttribute="trailing" secondItem="9dR-7U-4Zn" secondAttribute="trailing" constant="8" id="hEN-2n-jTD"/>
                                     <constraint firstItem="9dR-7U-4Zn" firstAttribute="leading" secondItem="kKb-yi-2d9" secondAttribute="leading" constant="8" id="hNx-br-k3t"/>
-                                    <constraint firstItem="W4S-8m-m1R" firstAttribute="top" secondItem="9dR-7U-4Zn" secondAttribute="bottom" constant="8" id="kjP-RO-wSw"/>
+                                    <constraint firstItem="i6R-PU-mcg" firstAttribute="baseline" secondItem="W4S-8m-m1R" secondAttribute="baseline" id="joa-jg-RSc"/>
+                                    <constraint firstItem="i6R-PU-mcg" firstAttribute="trailing" secondItem="9dR-7U-4Zn" secondAttribute="trailing" id="lvr-eE-N5y"/>
+                                    <constraint firstItem="W4S-8m-m1R" firstAttribute="leading" secondItem="9dR-7U-4Zn" secondAttribute="leading" id="mFz-mj-4E3"/>
                                     <constraint firstAttribute="trailing" secondItem="51W-xJ-teu" secondAttribute="trailing" constant="8" id="nfG-er-bAe"/>
                                     <constraint firstItem="Kgi-JX-FDw" firstAttribute="leading" secondItem="kKb-yi-2d9" secondAttribute="leading" id="qBa-fs-c4m"/>
                                     <constraint firstItem="hSv-sr-fUc" firstAttribute="top" secondItem="kKb-yi-2d9" secondAttribute="top" constant="8" id="rS6-IX-kkC"/>
@@ -191,9 +212,13 @@
                                         <exclude reference="qBa-fs-c4m"/>
                                         <exclude reference="hEN-2n-jTD"/>
                                         <exclude reference="hNx-br-k3t"/>
+                                        <exclude reference="1n9-uC-ph8"/>
+                                        <exclude reference="Qb7-rc-m0C"/>
+                                        <exclude reference="a7T-y4-avp"/>
                                     </mask>
                                 </variation>
                                 <connections>
+                                    <outlet property="cardCVVField" destination="i6R-PU-mcg" id="YGV-nB-hy1"/>
                                     <outlet property="cardNumberField" destination="W4S-8m-m1R" id="dRf-wB-l1X"/>
                                     <outlet property="donationAmountField" destination="51W-xJ-teu" id="icJ-PU-P12"/>
                                     <outlet property="emailField" destination="9dR-7U-4Zn" id="u7F-cp-MVJ"/>
@@ -345,6 +370,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="dGc-Ic-WNA"/>
+        <segue reference="3Se-mT-u07"/>
     </inferredMetricsTieBreakers>
 </document>
