--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -264,7 +264,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="yjb-Dv-nWz"/>
                     <connections>
-                        <outlet property="creditCardInfoEntryController" destination="kKb-yi-2d9" id="ojZ-QD-c13"/>
+                        <outlet property="cardInfoEntryView" destination="kKb-yi-2d9" id="5jc-M9-I16"/>
                         <segue destination="alg-Zd-1vr" kind="presentation" identifier="paymentMethodToPaymentStatusSegue" id="3Se-mT-u07"/>
                     </connections>
                 </viewController>
