--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -79,10 +79,11 @@
                                         <color key="textColor" red="0.32944389029999999" green="0.80239898990000003" blue="0.3813414343" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kgi-JX-FDw">
-                                        <rect key="frame" x="8" y="43" width="244" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kgi-JX-FDw">
+                                        <rect key="frame" x="8" y="43" width="113" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="180" id="ATZ-9g-4Ea"/>
+                                            <constraint firstAttribute="width" constant="113" id="T9c-ci-C5z"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -171,45 +172,64 @@
                                             </mask>
                                         </variation>
                                     </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Xg-d5-OUx">
+                                        <rect key="frame" x="129" y="43" width="123" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="180" id="3zt-Kd-HWP"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="3zt-Kd-HWP"/>
+                                            </mask>
+                                        </variation>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="51W-xJ-teu" firstAttribute="leading" secondItem="hSv-sr-fUc" secondAttribute="trailing" constant="8" id="0qW-4q-dHD"/>
                                     <constraint firstItem="W4S-8m-m1R" firstAttribute="trailing" secondItem="9dR-7U-4Zn" secondAttribute="trailing" id="1n9-uC-ph8"/>
+                                    <constraint firstItem="Kgi-JX-FDw" firstAttribute="baseline" secondItem="4Xg-d5-OUx" secondAttribute="baseline" id="2Gt-ZL-BSO"/>
                                     <constraint firstItem="i6R-PU-mcg" firstAttribute="leading" secondItem="W4S-8m-m1R" secondAttribute="trailing" constant="8" symbolic="YES" id="3Ga-PO-Vvj"/>
+                                    <constraint firstItem="4Xg-d5-OUx" firstAttribute="trailing" secondItem="51W-xJ-teu" secondAttribute="trailing" id="3oY-qg-AOt"/>
                                     <constraint firstAttribute="height" constant="205" id="7F2-uc-r1h"/>
                                     <constraint firstItem="Kgi-JX-FDw" firstAttribute="trailing" secondItem="51W-xJ-teu" secondAttribute="trailing" id="BRM-1s-EMB"/>
                                     <constraint firstItem="tEp-Fa-YS7" firstAttribute="top" secondItem="W4S-8m-m1R" secondAttribute="bottom" constant="8" symbolic="YES" id="BwH-62-yMH"/>
                                     <constraint firstItem="hSv-sr-fUc" firstAttribute="centerY" secondItem="51W-xJ-teu" secondAttribute="centerY" id="D6w-BN-eGJ"/>
-                                    <constraint firstItem="Kgi-JX-FDw" firstAttribute="top" secondItem="51W-xJ-teu" secondAttribute="bottom" constant="8" id="Ffb-dn-orW"/>
                                     <constraint firstAttribute="centerX" secondItem="tEp-Fa-YS7" secondAttribute="centerX" id="Gpj-NQ-okY"/>
+                                    <constraint firstItem="9dR-7U-4Zn" firstAttribute="top" secondItem="Kgi-JX-FDw" secondAttribute="bottom" constant="8" symbolic="YES" id="GyJ-Bi-2vv"/>
                                     <constraint firstItem="i6R-PU-mcg" firstAttribute="top" secondItem="9dR-7U-4Zn" secondAttribute="bottom" constant="8" symbolic="YES" id="IBc-wA-03I"/>
                                     <constraint firstItem="Kgi-JX-FDw" firstAttribute="trailing" secondItem="51W-xJ-teu" secondAttribute="trailing" id="K3W-xv-GnT"/>
                                     <constraint firstItem="9dR-7U-4Zn" firstAttribute="trailing" secondItem="Kgi-JX-FDw" secondAttribute="trailing" id="KKr-38-qEJ"/>
+                                    <constraint firstItem="4Xg-d5-OUx" firstAttribute="top" secondItem="51W-xJ-teu" secondAttribute="bottom" constant="8" id="NGe-rO-8VL"/>
                                     <constraint firstItem="hSv-sr-fUc" firstAttribute="leading" secondItem="kKb-yi-2d9" secondAttribute="leading" constant="8" id="OoB-sT-VGM"/>
                                     <constraint firstAttribute="trailing" secondItem="tEp-Fa-YS7" secondAttribute="trailing" id="Qb7-rc-m0C"/>
                                     <constraint firstAttribute="width" constant="260" id="Qzv-gq-Y5o"/>
-                                    <constraint firstItem="Kgi-JX-FDw" firstAttribute="leading" secondItem="kKb-yi-2d9" secondAttribute="leading" constant="8" id="Zea-qb-pWF"/>
                                     <constraint firstAttribute="centerX" secondItem="Kgi-JX-FDw" secondAttribute="centerX" id="ZjC-u5-i3l"/>
                                     <constraint firstItem="tEp-Fa-YS7" firstAttribute="leading" secondItem="kKb-yi-2d9" secondAttribute="leading" id="a7T-y4-avp"/>
+                                    <constraint firstItem="Kgi-JX-FDw" firstAttribute="leading" secondItem="hSv-sr-fUc" secondAttribute="leading" id="cQA-UA-9Vw"/>
                                     <constraint firstAttribute="trailing" secondItem="Kgi-JX-FDw" secondAttribute="trailing" id="ccj-C2-MfW"/>
+                                    <constraint firstItem="4Xg-d5-OUx" firstAttribute="trailing" secondItem="9dR-7U-4Zn" secondAttribute="trailing" id="dHk-Zc-Rxy"/>
                                     <constraint firstAttribute="trailing" secondItem="9dR-7U-4Zn" secondAttribute="trailing" constant="8" id="hEN-2n-jTD"/>
                                     <constraint firstItem="9dR-7U-4Zn" firstAttribute="leading" secondItem="kKb-yi-2d9" secondAttribute="leading" constant="8" id="hNx-br-k3t"/>
                                     <constraint firstItem="i6R-PU-mcg" firstAttribute="baseline" secondItem="W4S-8m-m1R" secondAttribute="baseline" id="joa-jg-RSc"/>
+                                    <constraint firstItem="Kgi-JX-FDw" firstAttribute="leading" secondItem="9dR-7U-4Zn" secondAttribute="leading" id="lDB-SU-s8c"/>
                                     <constraint firstItem="i6R-PU-mcg" firstAttribute="trailing" secondItem="9dR-7U-4Zn" secondAttribute="trailing" id="lvr-eE-N5y"/>
                                     <constraint firstItem="W4S-8m-m1R" firstAttribute="leading" secondItem="9dR-7U-4Zn" secondAttribute="leading" id="mFz-mj-4E3"/>
                                     <constraint firstAttribute="trailing" secondItem="51W-xJ-teu" secondAttribute="trailing" constant="8" id="nfG-er-bAe"/>
+                                    <constraint firstItem="4Xg-d5-OUx" firstAttribute="leading" secondItem="Kgi-JX-FDw" secondAttribute="trailing" constant="8" id="oby-5u-at5"/>
                                     <constraint firstItem="Kgi-JX-FDw" firstAttribute="leading" secondItem="kKb-yi-2d9" secondAttribute="leading" id="qBa-fs-c4m"/>
                                     <constraint firstItem="hSv-sr-fUc" firstAttribute="top" secondItem="kKb-yi-2d9" secondAttribute="top" constant="8" id="rS6-IX-kkC"/>
-                                    <constraint firstItem="9dR-7U-4Zn" firstAttribute="top" secondItem="Kgi-JX-FDw" secondAttribute="bottom" constant="8" id="s9n-yr-2ED"/>
-                                    <constraint firstItem="9dR-7U-4Zn" firstAttribute="leading" secondItem="Kgi-JX-FDw" secondAttribute="leading" id="vkI-bP-4rn"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
+                                        <exclude reference="BRM-1s-EMB"/>
                                         <exclude reference="K3W-xv-GnT"/>
                                         <exclude reference="ZjC-u5-i3l"/>
                                         <exclude reference="ccj-C2-MfW"/>
                                         <exclude reference="qBa-fs-c4m"/>
+                                        <exclude reference="KKr-38-qEJ"/>
                                         <exclude reference="hEN-2n-jTD"/>
                                         <exclude reference="hNx-br-k3t"/>
                                         <exclude reference="1n9-uC-ph8"/>
