--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swiper Status" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cN-fJ-skt">
-                                <rect key="frame" x="223" y="190" width="154" height="29"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swiper Status" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cN-fJ-skt">
+                                <rect key="frame" x="16" y="190" width="568" height="29"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -30,7 +30,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="5cN-fJ-skt" firstAttribute="trailing" secondItem="Q7f-0A-JRq" secondAttribute="trailingMargin" id="6nD-2Q-3Ev"/>
                             <constraint firstItem="5cN-fJ-skt" firstAttribute="top" secondItem="T0T-zz-vQr" secondAttribute="bottom" id="Who-hJ-SvS"/>
+                            <constraint firstItem="5cN-fJ-skt" firstAttribute="leading" secondItem="Q7f-0A-JRq" secondAttribute="leadingMargin" id="Xca-8e-xbZ"/>
                             <constraint firstItem="aff-pR-Ufo" firstAttribute="top" secondItem="5cN-fJ-skt" secondAttribute="bottom" constant="8" id="aRK-XL-VnR"/>
                             <constraint firstAttribute="centerX" secondItem="5cN-fJ-skt" secondAttribute="centerX" id="br5-US-dmi"/>
                             <constraint firstItem="aff-pR-Ufo" firstAttribute="centerX" secondItem="5cN-fJ-skt" secondAttribute="centerX" constant="0.5" id="lmw-WI-zbP"/>
@@ -39,6 +41,7 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="Who-hJ-SvS"/>
+                                <exclude reference="br5-US-dmi"/>
                             </mask>
                         </variation>
                     </view>
